# engr4200-termproject

./: README.md
install/: local_setup.sh  setup.sh
install/delivery_bringup/lib/delivery_bringup/: bringup_manager
install/delivery_bringup/share/delivery_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delivery_bringup/share/delivery_bringup/config/: robot_description.yaml  sensor_params.yaml
install/delivery_bringup/share/delivery_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
install/delivery_interfaces/share/delivery_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/delivery_interfaces/share/delivery_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  (+15 more)
install/delivery_manipulator/lib/delivery_manipulator/: rack_pinion_controller
install/delivery_manipulator/share/delivery_manipulator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delivery_mapping_nav/lib/delivery_mapping_nav/: nav_manager
install/delivery_mapping_nav/share/delivery_mapping_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delivery_task_manager/lib/delivery_task_manager/: task_manager_node
install/delivery_task_manager/share/delivery_task_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delivery_vision_scanner/lib/delivery_vision_scanner/: scanner_node
install/delivery_vision_scanner/share/delivery_vision_scanner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/delivery_bringup/: package.xml  setup.py
src/delivery_bringup/config/: robot_description.yaml  sensor_params.yaml
src/delivery_bringup/delivery_bringup/: bringup_manager.py
src/delivery_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
src/delivery_interfaces/: CMakeLists.txt
src/delivery_interfaces/srv/: ScanPackage.srv
src/delivery_manipulator/: package.xml  setup.cfg  setup.py
src/delivery_manipulator/config/: rack_pinion.params.yaml
src/delivery_manipulator/delivery_manipulator/: hw_interface.py  rack_pinion_controller.py
src/delivery_manipulator/launch/: rack_pinion.launch.py
src/delivery_mapping_nav/: package.xml  setup.cfg  setup.py
src/delivery_mapping_nav/config/nav2/: costmap_params.yaml  nav2_params.yaml
src/delivery_mapping_nav/config/slam_toolbox/: mapping.yaml
src/delivery_mapping_nav/delivery_mapping_nav/: nav_manager.py
src/delivery_mapping_nav/launch/: mapping.launch.py  nav.launch.py
src/delivery_task_manager/: package.xml  setup.cfg  setup.py
src/delivery_task_manager/config/: locations.yaml  task_params.yaml
src/delivery_task_manager/delivery_task_manager/: task_manager_node.py
src/delivery_task_manager/delivery_task_manager/states/: dropoff_package.py  go_to_dropoff.py  go_to_pickup.py  idle.py  pickup_package.py  return_to_pickup.py  scan_package.py
src/delivery_task_manager/launch/: task_manager.launch.py
src/delivery_vision_scanner/: package.xml  setup.cfg  setup.py
src/delivery_vision_scanner/delivery_vision_scanner/: scanner_node.py  tag_detector.py
src/delivery_vision_scanner/launch/: vision_scanner.launch.py
(+55 files in other folders)
