[develop]
script_dir=$base/lib/delivery_manipulator
[install]
install_scripts=$base/lib/delivery_manipulator
[options]
packages = find:
install_requires = setuptools
zip_safe = True

[options.data_files]
share/ament_index/resource_index/packages =
    resource/delivery_manipulator
share/delivery_manipulator =
    package.xml
share/delivery_manipulator/launch =
    launch/rack_pinion.launch.py
share/delivery_manipulator/config =
    config/rack_pinion.params.yaml

